fix bug in styles css amala recipe section
the bug made all h1 h2 h3 in all recipes
get the same properties as the amala
i used the wrong selector.

--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,20 @@
     background-color: coral;
 }
 
+/* AMALA STYLING*/
 .amala-body{
     background-color: indianred;
 }
 
-.amala-body h1, h2, h3 {
+.amala-body h1, .amala-body h2, .amala-body h3 {
     color: aliceblue;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
+
+/* LASAGNA STYLING*/
+.lasagna-body {
+    background-color: lightseagreen;
+}
+
+
+/* JOLLOF RICE STYLING*/
